# glyphx

./: .readthedocs.yaml  .readthedocs.yml  README.md  examples.py  pyproject.toml  setup.cfg  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci_tests.yml  python-publish.yml
docs/: advanced.rst  api.rst  api_reference.rst  conf.py  customization.rst  downsampling.rst  examples.rst  getting_started.rst  index.rst  intro.rst  requirements.txt  usage.rst
docs/_templates/: layout.html
docs/examples/: 11_3d_bar3d_grid.html  11_3d_bar3d_revenue.html  11_3d_line_helix.html  11_3d_line_lissajous.html  11_3d_scatter_colormap.html  11_3d_scatter_multi_series.html  11_3d_surface_gaussian.html  11_3d_surface_saddle.html  11_3d_surface_scatter_overlay.html  11_3d_surface_sinc.html  11_3d_theme_dark.html  11_3d_theme_default.html  11_3d_theme_ocean.html
glyphx/: __init__.py  a11y.py  accessor.py  axes.py  bar3d.py  bubble.py  bump_chart.py  candlestick.py  choropleth.py  cli.py  clustermap.py  colormaps.py  contour.py  diverging_bar.py  downsample.py  ecdf.py  facet_grid.py  figure.py  figure3d.py  fill_between.py  gantt.py  grouped_bar.py  hue_mixin.py  jointplot.py  kde.py  layout.py  line3d.py  nlp.py  pairplot.py  parallel_coords.py  plot.py  plot3d.py  projection3d.py  raincloud.py  regplot.py  scatter3d.py  series.py  sparkline.py  stacked_bar.py  stat_annotation.py  (+11 more)
glyphx/assets/: accessibility.js  brush.js  crosshair.js  interact.js  responsive_template.html  zoom.js
tests/: conftest.py  pytest_shim.py  run_tests.py  test_basic_plot.py  test_competitive_features.py  test_features_1_5.py  test_features_6_8.py  test_new_features.py  test_vs_competitors.py
