[tool:pytest]
minversion = 1.0.0
testpaths = 
    tests
filterwarnings =
    error
    ignore:numpy\.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    ignore:`np.bool` is a deprecated alias for the builtin `bool`:DeprecationWarning

[metadata]
name = glyphx
description = "A next-gen Python plotting library with SVG-first rendering, interactivity, themes, and clean defaults — better than matplotlib.pyplot"
long_description = file: README.md
long_description_content_type = text/markdown
author = Kyle Koeller
license = MIT
license_file = LICENSE
url = https://github.com/kjkoeller/glyphx
project_urls =
    Source = https://github.com/kjkoeller/glyphx
    Documentation = https://github.com/kjkoeller/glyphx#readme
version = attr: glyphx.__version__
keywords = plotting, visualization, svg, charts, jupyter, cli, ide, interactive, matplotlib alternative

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy>=1.21
    ipython>=7.0
    ipywidgets>=8.1
    pandas>=1.4.2

[options.extras_require]
dev =
    pytest
    black
    flake8
    isort
docs =
    sphinx
    furo
    sphinx-copybutton

[options.entry_points]
console_scripts =
    glyphx = glyphx.cli:main

[aliases]
test = pytest

[pycodestyle]
select = E101,E111,E112,E113,E221,E222,E223,E224,E225,E241,E242,E251,E271,E272,E303,E304,E502,E703,E901,E902,W191,W291,W292,W293,W391

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[coverage:run]
source = glyphx

[coverage:report]
exclude_lines =
    pragma: no cover
    except ImportError
    raise AssertionError
    raise NotImplementedError
    def main\(.*\):
    pragma: py{ignore_python_version}