[tool:pytest]
minversion = 1.0.0
testpaths =
    tests
filterwarnings =
    error
    ignore:numpy\.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    ignore:`np.bool` is a deprecated alias for the builtin `bool`:DeprecationWarning
markers =
    slow: mark test as slow-running

[metadata]
name = glyphx
description = A next-gen Python plotting library with SVG-first rendering, interactivity, themes, and clean defaults
long_description = file:README.md
long_description_content_type = text/markdown
url = https://glyphx.readthedocs.io/
version = attr: glyphx.__version__
author = Kyle Koeller
license = MIT
github_project = kjkoeller/glyphx

[options]
packages = find:
zip_safe = False
install_requires =
    numpy>=1.21
    pandas>=1.4.2
    ipython>=7.0
    ipywidgets>=8.1
python_requires = >=3.8
test_require = pytest
include_package_data = True
package_data =
    glyphx = py.typed
              assets/*.js
              assets/*.html
              assets/*.py

[options.entry_points]
console_scripts =
    glyphx = glyphx.cli:main

[options.extras_require]
export =
    cairosvg>=2.5
pptx =
    cairosvg>=2.5
    python-pptx>=0.6.21
nlp =
    anthropic>=0.20
all =
    cairosvg>=2.5
    python-pptx>=0.6.21
    anthropic>=0.20

[aliases]
test = pytest

[pycodestyle]
select = E101,E111,E112,E113,E221,E222,E223,E224,E225,E241,E242,E251,E271,E272,E303,E304,E502,E703,E901,E902,W191,W291,W292,W293,W391

[flake8]
max-line-length = 100
extend-ignore = E203

[coverage:run]
source = glyphx

[coverage:report]
exclude_lines =
    pragma: no cover
    except ImportError
    raise AssertionError
    raise NotImplementedError
    def main\(.*\):
