[metadata]
name = glyphx
description = A next-gen Python plotting library with SVG-first rendering, interactivity, themes, and clean defaults
long_description = file:README.md
long_description_content_type = text/markdown
url = https://glyphx.readthedocs.io/
author = Kyle Koeller
license = MIT
github_project = kjkoeller/glyphx

[options]
packages = find:
zip_safe = False
install_requires =
    numpy>=1.26
    pandas>=2.0
    ipython>=8.0
    ipywidgets>=8.1
    cairosvg>=2.5
    python-pptx>=0.6.21
    anthropic>=0.20
python_requires = >=3.12
include_package_data = True

[options.package_data]
glyphx =
    py.typed
    assets/*.js
    assets/*.html
    assets/*.py

[options.entry_points]
console_scripts =
    glyphx = glyphx.cli:main

[options.extras_require]
test =
    pytest
docs =
    sphinx
    furo
    matplotlib

[tool:setuptools_scm]
write_to = glyphx/_version.py

[pycodestyle]
select = E101,E111,E112,E113,E221,E222,E223,E224,E225,E241,E242,E251,E271,E272,E303,E304,E502,E703,E901,E902,W191,W291,W292,W293,W391

[flake8]
max-line-length = 100
